# BaiduPCS-Relay-RS

./: .dockerignore  .gitignore  CHECKLIST.md  COMMIT_MESSAGE.md  Cargo.toml  Dockerfile  Dockerfile.web  README.md  RELEASE_NOTES.md  TEST_GUIDE.md  TRANSFER_FIX.md  angey40-baidupcs-go-8a5edab282632443.txt  build-release.sh  config.example.toml  diagnose.sh  docker-compose.yml  felixonmars-baidupcs-go-8a5edab282632443 (1).txt  podman-compose-web.yml  podman-compose.yml  podman-run.sh  repomix-output.xml  share_page.html  test_debug_list.sh  test_extract.sh  test_max_size.py  test_max_size.sh  test_size_limit.sh  测试指南.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs  main_web.rs  state.rs  web.rs
src/baidupcs/: download.rs  mod.rs  openapi.rs  parser.rs  share.rs  transfer.rs  types.rs
templates/: index.html  login.html
tests/: integration_test.rs  test_download.rs
